Fix stretched homepage images: height auto with explicit dimensions

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -294,6 +294,7 @@ section {
     img {
       display: block;
       width: 100%;
+      height: auto;
     }
   }
 
